force-app/main/default/objects/DESKSCMT__Desk_Migration_Job__c/DESKSCMT__Desk_Migration_Job__c.object-meta.xml
<CustomObject>
    <label>Desk Migration Job</label>
    <nameField>
        <displayFormat>DMJ-{000000}</displayFormat>
        <label>DMJ</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Migration Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>