force-app/main/default/objects/DESKSCMT__Desk_Migration_Job__c/fields/DESKSCMT__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Batch_Id__c</fullName>
    <externalId>true</externalId>
    <label>Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>