force-app/main/default/objects/DESKSCMT__Desk_Migration_Job__c/fields/DESKSCMT__Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Batch_Name__c</fullName>
    <label>Batch Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>