force-app/main/default/objects/DESKSCMT__Desk_Migration_Job__c/fields/DESKSCMT__Batch_Params__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Batch_Params__c</fullName>
    <label>Batch Params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>