force-app/main/default/objects/DESKSCMT__Desk_Migration_Job__c/fields/DESKSCMT__Desk_Migration__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Migration__c</fullName>
    <label>Desk Migration</label>
    <referenceTo>DESKSCMT__Desk_Migration__c</referenceTo>
    <relationshipLabel>Desk Migration Jobs</relationshipLabel>
    <relationshipName>Desk_Migration_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>